# Healuxa

./: .gitignore  Healuxa_DDD_Boundaries.md  Healuxa_TechSpec.md  README.md  healuxa_proposal.js  package-lock.json  package.json
.cursor/rules/: architecture-governance.mdc
.github/workflows/: ci.yml
infrastructure/: docker-compose.dev.yml
services/identity-service/: .env.example  Dockerfile  nixpacks.toml  pyproject.toml
services/identity-service/migrations/: env.py
services/identity-service/migrations/versions/: 0001_phase0_baseline.py  0002_identity_schema.py  0003_user_journey_permissions.py  0004_profile_permissions.py  0005_assessment_permissions.py
services/identity-service/src/identity_service/: config.py  main.py
services/identity-service/src/identity_service/api/: auth.py  deps.py  iam.py  sessions.py  well_known.py
services/identity-service/src/identity_service/domain/: auth_service.py  iam_service.py  idempotency.py  jwt_service.py  pagination.py  schemas.py  security.py  session_service.py
services/identity-service/src/identity_service/events/: publisher.py
services/identity-service/src/identity_service/infra/: db.py  models.py  redis_client.py  session_cache.py
services/identity-service/tests/: conftest.py  test_assessment_rbac.py  test_auth_flow.py  test_journey_rbac.py  test_openapi_compliance.py  test_profile_rbac.py
services/profile-service/: .env.example  Dockerfile  nixpacks.toml  pyproject.toml
services/profile-service/src/profile_service/: __init__.py  config.py  main.py
services/profile-service/src/profile_service/api/: deps.py  profiles.py
services/profile-service/src/profile_service/domain/: profile_service.py  schemas.py  security.py
services/profile-service/src/profile_service/events/: publisher.py
services/profile-service/src/profile_service/infra/: mongo.py
services/profile-service/tests/: conftest.py  test_openapi_compliance.py  test_profile_flow.py
services/transformation-engine/: .env.example  Dockerfile  nixpacks.toml  pyproject.toml
services/transformation-engine/migrations/: env.py
services/transformation-engine/migrations/versions/: 0001_phase0_baseline.py  0002_journey_aggregate.py
services/transformation-engine/src/transformation_engine/: __init__.py  config.py  main.py
services/transformation-engine/src/transformation_engine/api/: deps.py  journeys.py
services/transformation-engine/src/transformation_engine/domain/: idempotency.py  journey_service.py  schemas.py
services/transformation-engine/src/transformation_engine/events/: publisher.py
services/transformation-engine/src/transformation_engine/infra/: db.py  models.py
services/transformation-engine/tests/: conftest.py  helpers.py  test_journey_flow.py  test_openapi_compliance.py
(+24 files in other folders)
