[project]
name = "profile-service"
version = "0.1.0"
description = "Healuxa Profile Service — customer profile documents (MongoDB Atlas)"
requires-python = ">=3.12"
dependencies = [
    "healuxa-py-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "motor>=3.6",
    "prometheus-client>=0.21",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "python-ulid>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "mongo: tests requiring MongoDB Atlas (skipped when MONGODB_URI unset)",
]
